--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,229 @@ img{
 	width: 100%; /*100% of their container*/
 }
 
+body{
+	font-family: "Open-sans", sans-serif;
+	font-size: 17px;
+	line-height: 1.5em;
+	margin: 0;
+	padding: 0;
+}
+
+ /*COMMON CLASSES*/
+.primary-text{
+	color: #56a79a;
+}
+
+.primary-background{
+	background-color: #56a79a;
+}
+
+  /*  HEADER  */
+
+#main-header{
+	border-bottom: 1px solid #56a79a;
+}
+
+/*NAVBAR*/
+#navbar{
+	text-transform: uppercase;
+}
+
+#navbar li{
+	display: inline;
+	padding-right: 20px;
+	list-style: none; /*Not to have a bullet points*/
+}
+
+#navbar a {
+	text-decoration: none;
+	color: #888;
+}
+
+#navbar li.current a, #navbar a:hover{
+	color: #56a79a;
+	border-bottom: 3px solid #56a79a;
+	padding-bottom: 3px;
+}
 
 
+/*SHOWCASE*/
+#showcase{
+	background-image: url("https://citelighter-cards.s3.amazonaws.com/p17d98f5st15qd1tsv1m9c1sbu11uo0_64674.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	border-bottom: 1px solid #56a79a; 
+	margin-bottom: 30px;
+}
 
+#showcase .row{
+	height: 600px;
+}
+
+#showcase h1{
+	font-size: 50px;
+	margin:0;
+	padding-bottom: 20px;
+}
+
+#showcase p{
+	color: #ccc;
+	margin:0;
+}
+
+
+#showcase .showcase-content{
+	background: #333;
+	color: #fff;
+	border-radius: 90px;
+	padding: 40px;
+	opacity: 0.9;
+}
+
+
+/*FEATURES*/
+#features h2{
+	font-size: 35px;
+	margin: 0;
+	padding-bottom: 10px;
+}
+
+#features p {
+	color: #888;
+	margin: 0;
+	margin-bottom: 40px;
+}
+
+#features .fa{
+	font-size: 60px;
+	color: #56a79a;
+
+}
+
+
+/*INFO*/
+#info {
+	background-image: url("https://hdwallsource.com/img/2014/4/free-background-wallpaper-22918-23554-hd-wallpapers.jpg");
+	background-repeat: no-repeat;
+	background-color: #333;
+	color: white;
+}
+
+#info h2{
+	font-size: 35px;
+	margin: 0;
+	padding-bottom: 10px;
+}
+
+#info ul{
+	list-style: none;
+	padding: 0;
+}
+
+#info li{
+	line-height: 2em;
+	font-size: 20px;
+}
+
+/*COMPANY*/
+#company{
+	background-color: #333;
+	color: #fff;
+	padding: 10px 0;
+}
+
+#company h4{
+	text-transform: uppercase;
+	margin-bottom: 0;
+}
+
+#company ul{
+	padding:0;
+	list-style: none;
+	line-height: 2em;
+}
+
+#company input[type="text"]{
+	padding: 7px;
+}
+
+#company button{
+	background: #222;
+	color: white;
+	padding: 10px;
+	border: 0;
+}
+
+
+/*FOOTER*/
+#main-footer{
+	background-color: #56a79a;
+	color: white;
+
+}
+
+/*PAGE*/
+#page{
+	margin-bottom: 40px;
+}
+
+/*SERVICES*/
+.services ul li{
+	list-style: none;
+	padding: 10px;
+}
+
+.services ul li:nth-child(odd){
+	background-color: #333;
+	color: #fff;
+
+}
+
+.services ul li:nth-child(even){
+	background-color: #56a79a;
+	color: #fff;
+
+}
+
+/*CONTACT*/
+.contact form{
+	background-color: #333;
+	color: white;
+	padding: 20px; 
+}
+
+.contact form input[type="text"]{
+	width: 50%;
+	height: 30px;
+	margin-bottom: 10px;
+}
+
+.contact form textarea[type="text"]{
+	width: 50%;
+	height: 100px;
+}
+
+.contact form button{
+	width: 50%;
+	padding: 10px 0;
+	border: 0;
+	background-color: #222;
+	color: white;
+}
+
+.contact form label {
+	text-transform: uppercase;
+}
+
+/*MEDIA QUERIES*/
+@media(max-width:800px){
+	#showcase h1{
+		font-size: 30px;
+	}
+}
+
+@media(max-width:500px){
+	#showcase .showcase-content{
+		padding: 40px 10px;
+	}
+}
